--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -5,19 +5,14 @@ layout: page
 
 {% include lang.html %}
 
-{% assign pagetagged = "" | split: "" %}
-{% for post in site.tags[page.title] %}
-  {% assign pagetagged = pagetagged | push: post %}
-{% endfor %}
-
 <div id="page-tag">
   <h1 class="pl-lg-2">
     <i class="fa fa-tag fa-fw text-muted"></i>
     {{ page.title }}
-    <span class="lead text-muted pl-2">{{ pagetagged | size }}</span>
+    <span class="lead text-muted pl-2">{{ page.posts | size }}</span>
   </h1>
   <ul class="post-content pl-0">
-    {% for post in pagetagged %}
+    {% for post in page.posts %}
     <li class="d-flex justify-content-between pl-md-3 pr-md-3">
       <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
       <span class="dash flex-grow-1"></span>
